--- a/app/views/employee_surveys/_matrix_question_fields.html.erb
+++ b/app/views/employee_surveys/_matrix_question_fields.html.erb
@@ -26,7 +26,7 @@
       </div>
 
       <br />
-      <%= link_to_add_association'+ Row', f, :options, partial: 'employee_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append', class: "btn btn-default"
+      <%= link_to_add_association'+ Row', f, :options, partial: 'employee_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append', class: "btn btn-primary"
       %>
 
 
