--- a/app/views/employee_surveys/_mc_question_fields.html.erb
+++ b/app/views/employee_surveys/_mc_question_fields.html.erb
@@ -15,8 +15,8 @@
       <%= f.text_field :body, class: "form-control", placeholder: "Multiple Choice Question Body Here" %>
 
       <br />
-      <%= link_to_add_association'Add MC Response', f, :options, partial: 'employee_surveys/options/mc_option_fields',
-      'data-association-insertion-method' => 'append', class: 'btn btn-default'
+      <%= link_to_add_association'+ MC Response', f, :options, partial: 'employee_surveys/options/mc_option_fields',
+      'data-association-insertion-method' => 'append', class: 'btn btn-primary'
       %>
 
 
