--- a/app/views/employee_surveys/new.html.erb
+++ b/app/views/employee_surveys/new.html.erb
@@ -7,8 +7,8 @@
     <%# @study = params['study_id'].to_i %>
     <%= simple_form_for (@employee_survey), :url => study_employee_surveys_path(@study) do |f|%>
     <div class="panel panel-primary">
-      <div class="panel-heading panel-heading-form">
-        <%= f.submit class: "btn btn-default pull-right", value: "Save" %>
+      <div class="panel-heading panel-heading">
+        <%#= f.submit class: "btn btn-default pull-right", value: "Save" %>
 
         <h3 class="panel-title">Form Name</h3>
       </div>
@@ -60,8 +60,17 @@
           </div>
           <% end %>
         </div>
+        <button class="btn btn-success" style="width: 100%"id="submit-btn"> Save</button>
       </div>
     </div>
   </div>
 </div>
 <% end %>
+
+<script>
+
+$('#submit-btn').on('click', function (){
+
+$('form').submit()
+})
+</script>
