--- a/app/views/manager_surveys/_matrix_question_fields.html.erb
+++ b/app/views/manager_surveys/_matrix_question_fields.html.erb
@@ -25,11 +25,10 @@
         <label> Matrix Headers (seperate with commas) </label>
       </div>
       <br />
-      <%= link_to_add_association'+ Row', f, :options, partial: 'manager_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append', class: "btn btn-default"
+      <%= link_to_add_association'+ Row', f, :options, partial: 'manager_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append', class: "btn btn-primary"
       %>
 
 
-      <%= link_to_remove_association "Remove Question", f, wrapper_class: 'matrix-container', class: 'btn btn-default' %>
     </div>
   </div>
 </div>
