--- a/app/views/manager_surveys/new.html.erb
+++ b/app/views/manager_surveys/new.html.erb
@@ -7,8 +7,8 @@
     <%# @study = params['study_id'].to_i %>
     <%= simple_form_for (@manager_survey), :url => study_manager_surveys_path(@study) do |f|%>
     <div class="panel panel-primary">
-      <div class="panel-heading panel-heading-form">
-        <%= f.submit class: "btn btn-default pull-right", value: "Save" %>
+      <div class="panel-heading panel-heading">
+        <%#= f.submit class: "btn btn-default pull-right", value: "Save" %>
         <h3 class="panel-title">Form Name</h3>
       </div>
       <div class="panel-body">
@@ -38,8 +38,6 @@
       </div>
       <div class="panel-body">
         <div class="btn-group-vertical" style="width: 100%">
-
-
           <%= link_to_add_association f, :questions, partial: 'manager_surveys/mc_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' do %>
             <div class="text-left">
               <i class="glyphicon glyphicon-list question-icon" aria-hidden="true" > </i>
@@ -59,8 +57,18 @@
             </div>
           <% end %>
         </div>
+        <button class="btn btn-success" style="width: 100%"id="submit-btn"> Save</button>
       </div>
     </div>
+
   </div>
 </div>
 <% end %>
+
+<script>
+
+$('#submit-btn').on('click', function (){
+
+$('form').submit()
+})
+</script>
