Add ability to download ind manager reponses for all employees. No option value heading though... :(

--- a/app/views/employee_surveys/new.html.erb
+++ b/app/views/employee_surveys/new.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class="panel-body">
 
-          <%= f.text_field :form_name, class: "form-control", value: "#{@study.title} -- Employee Time #{@survey_number}" %>
+          <%= f.text_field :form_name, class: "form-control", value: "Time #{@survey_number}" %>
           <label>(click to change)</label>
       </div>
     </div>
