--- a/app/views/manager_surveys/new.html.erb
+++ b/app/views/manager_surveys/new.html.erb
@@ -14,7 +14,7 @@
       <div class="panel-body">
 
 
-          <%= f.text_field :form_name, class: "form-control", value: "#{@study.title} -- Manager Time #{@survey_number}" %>
+          <%= f.text_field :form_name, class: "form-control", value: "Time #{@survey_number}" %>
           <label>(click to change)</label>
 
       </div>
