--- a/app/views/manager_entries/new.html.erb
+++ b/app/views/manager_entries/new.html.erb
@@ -23,7 +23,7 @@
         <% @survey.questions.each_with_index do |question, index| %>
         <% q_num = index + 1 %>
         <% if question.mc? %>
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Question <%= q_num %></h3>
           </div>
@@ -62,7 +62,7 @@
           </div>
         </div>
         <% elsif question.matrix? %>
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Question <%=index + 1 %></h3>
           </div>
@@ -113,7 +113,7 @@
 
 
         <% elsif question.checklist? %>
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Question <%=index + 1 %></h3>
           </div>
@@ -131,8 +131,8 @@
                   value= "<%= option.content %>" >
 
                   <input type="checkbox" name=<%= "data[q#{q_num}][response][opt#{index + 1}][value]" %>
-
                   value= 1>
+
                   <%= option.content %>
                 </label>
               </div>
