--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,6 +1,4 @@
 
-
-
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <h1>New Employee </h1>
@@ -49,3 +47,9 @@
 
     </div>
   </div>
+
+
+    <script>
+       $('.bootstrap-select').selectpicker();
+
+    </script>
