Add branding and logo

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Brand</a>
+    <%= link_to root_path, class: "navbar-brand" do%> <span><%= image_tag("atom-logo-white.png", height: "100%", width: "30px;") %> Covalent </span></a> <% end %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
