--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -124,7 +124,7 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-sm-7">
-              <%= pie_chart [["Signed Up - Active", @employees_signed_up_active],["Signed Up - No Entries", @employees_signed_up_inactive], ["Not Signed Up", @employees_not_signed_up]], colors: ["#5CB85C", "yellow", "#D9534F"] %>
+              <%= pie_chart [["Signed Up - Active", @employees_signed_up_active],["Signed Up - No Entries", @employees_signed_up_inactive], ["Not Signed Up", @employees_not_signed_up]], colors: ["#5CB85C", "#F0AD4E", "#D9534F"] %>
             </div>
             <div class="col-sm-5" >
 
