--- a/app/views/manager_surveys/show.html.erb
+++ b/app/views/manager_surveys/show.html.erb
@@ -4,7 +4,7 @@
     <h1><%= @manager_survey.form_name %></h1>
       <% @manager_survey.questions.each_with_index do |question, index| %>
         <% if question.mc? %>
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Question <%=index + 1 %></h3>
           </div>
@@ -22,7 +22,7 @@
           </div>
         </div>
         <% elsif question.matrix? %>
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Question <%=index + 1 %></h3>
           </div>
@@ -56,7 +56,7 @@
           </div>
 
         <% elsif question.checklist? %>
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title">Question <%=index + 1 %></h3>
             </div>
