--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -1,11 +1,10 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-    <h1>Sign Up</h1>
-    <p>
-      For: <%= @company %>
-    </p>
-    <%= @manager.errors.full_messages.join(', ') %>
-    <%= form_for @manager do |f| %>
+    <div class="well">
+      <legend><%= @company.titleize %> - Manager</legend>
+
+      <%= @manager.errors.full_messages.join(', ') %>
+      <%= form_for @manager do |f| %>
       <div class="form-group">
         <%= f.label :first_name %>
         <%= f.text_field :first_name, class: "form-control" %>
@@ -26,7 +25,9 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, class: "form-control" %>
       </div>
-      <%= f.submit class: "btn btn-default" %>
-    <% end %>
+      <%= f.submit class: "btn btn-primary", value: "Sign Up", style: "width: 50%" %>
+      <% end %>
+
+    </div>
   </div>
 </div>
