--- a/app/views/researchers/new.html.erb
+++ b/app/views/researchers/new.html.erb
@@ -2,9 +2,13 @@
 
 <div class="row">
   <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-    <h1>Sign Up</h1>
-    <%= @researcher.errors.full_messages.join(', ') %>
-    <%= form_for @researcher do |f| %>
+
+    <div class="well">
+      <legend>
+        Sign Up - Researcher
+      </legend>
+      <%= @researcher.errors.full_messages.join(', ') %>
+      <%= form_for @researcher do |f| %>
       <div class="form-group">
         <%= f.label :first_name %>
         <%= f.text_field :first_name, class: "form-control" %>
@@ -25,7 +29,8 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, class: "form-control" %>
       </div>
-      <%= f.submit class: "btn btn-default" %>
-    <% end %>
+      <%= f.submit class: "btn btn-primary", value: "Sign Up", style: "width: 50%" %>
+      <% end %>
+    </div>
   </div>
 </div>
