--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,62 +1,111 @@
 
 
-<div class='container-fluid'>
-  <div class="row">
-    <div class=" col-xs-2 col-xs-offset-2 col-md-2 col-md-offset-6">
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+    <div class= "col-xs-3 col-md-2 col-md-offset-5">
 
-      <%= button_to "Create Study", new_study_path, class: "btn btn-default pull-right", method: :get%>
-
+      <%= button_to "Create Study", new_study_path, class: "btn btn-success", method: :get%>
     </div>
-    <div class="col-xs-8 col-md-4">
+
+    <div class="col-xs-8 col-md-4 col-xs-offset-1">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
-          <button class="btn btn-default" type="button">Go!</button>
+          <button class="btn btn-primary" type="button">Go!</button>
         </span>
       </div><!-- /input-group -->
     </div><!-- /.col-lg-6 -->
 
   </div>
+
 </div>
 
+<br />
 
 
 <div class="row">
-  <div class="col-xs-12 ">
+  <div class="col-xs-8 col-xs-offset-2 ">
 
     <% @studies.each do |study| %>
     <%= link_to study_path(study.id) do %>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title"><%= study.title %></h3>
       </div>
       <div class="panel-body">
         <div class="container-fluid">
+          <div class="row">
 
-          <div class ="row">
-            <div class="col-sm-1 ">
-              <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+            <div class="col-sm-3 col-sm-offset-6 text-center">
+              <label class="info-label">Responses</label>
             </div>
-            <div class="col-sm-2 col-sm-offset-1">
-              <%= study.status %>
+            <div class="col-sm-3 text-center">
+              <label class="info-label">Last Response</label>
             </div>
-            <div class="hidden-xs col-sm-3">
-              % RESPONDED HERE
-            </div>
-            <div class="hidden-xs col-sm-3">
-            % REGISTERED HERE
+          </div>
+
+          <div class ="row  vcenter">
+            <div class="col-sm-6 ">
+              <span><span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+
+              <span class="company-title"><%= study.company.titleize %></span>
 
             </div>
 
-            <div class="col-sm-1">
-              DETAILS
+
+
+
+            <div class="col-sm-3 text-center">
+              <span id="entry-count-label"><%= study.entries.count %></span>
             </div>
+            <div class="col-sm-3 text-center">
+              <span id="last-response-label"><%= study.last_response %></span>
+            </div>
+
           </div>
         </div>
 
+
+      </div> <!-- panel body -->
+      <div class="panel-footer">
+
+        <div class="row">
+          <div class="col-xs-6">
+            Managers
+            <%= study.manager_green_width %>
+            <%= study.manager_red_width %>
+            <%= study.num_of_not_signed_up_managers %>
+            <%= study.manager_color_total %>
+            <%= study.num_of_not_signed_up_managers %>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success"
+              style="width: <%= study.manager_green_width %>%">
+            </div>
+            <div class="progress-bar progress-bar-warning"
+            style="width: <%= study.manager_yellow_width %>%"></div>
+            <div class="progress-bar progress-bar-danger"
+            style="width: <%= (study.num_of_not_signed_up_managers / study.manager_color_total) %>%"></div>
+          </div>
+
+
+        </div>
+        <div class="col-xs-6">
+          Employees
+          <div class="progress">
+            <div class="progress-bar progress-bar-success"
+            style="width: <%= study.employee_green_width %>%">
+          </div>
+          <div class="progress-bar progress-bar-warning"
+          style="width: <%= study.employee_yellow_width %>%"></div>
+          <div class="progress-bar progress-bar-danger"
+          style="width: <%= study.employee_red_width %>%"></div>
+        </div>
       </div>
+    </div>
+  </div>
   </div>
     <% end %>
     <% end %>
   </div>
+
 </div>
