--- a/app/views/studies/new.html.erb
+++ b/app/views/studies/new.html.erb
@@ -1,26 +1,31 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-    <h1>Create Study</h1>
-    <%= @study.errors.full_messages.join(', ') %>
-    <%= form_for @study do |f| %>
+    <div class="well">
+      <legend>
+        Create Study
+      </legend>
+      <%= @study.errors.full_messages.join(', ') %>
+      <%= form_for @study do |f| %>
       <div class="form-group">
         <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
+        <%= f.text_field :title, class: "form-control", placeholder: "My First Study" %>
       </div>
       <div class="form-group">
         <%= f.label :company %>
-        <%= f.text_field :company, class: "form-control" %>
+        <%= f.text_field :company, class: "form-control", placeholder: "Acme Inc." %>
       </div>
       <div class="form-group">
         <%= f.label :number_of_managers %>
-        <%= f.number_field :num_of_managers, class: "form-control" %>
+        <%= f.number_field :num_of_managers, class: "form-control", placeholder: "5" %>
       </div>
       <div class="form-group">
         <%= f.label :number_of_employees %>
-        <%= f.number_field :num_of_employees, class: "form-control" %>
+        <%= f.number_field :num_of_employees, class: "form-control", placeholder: "15" %>
       </div>
 
-      <%= f.submit class: "btn btn-default" %>
-    <% end %>
+      <%= f.submit class: "btn btn-primary" %>
+      <% end %>
+
+    </div>
   </div>
 </div>
