Fix progress bar bugs

--- a/app/views/employee_entries/new.html.erb
+++ b/app/views/employee_entries/new.html.erb
@@ -114,6 +114,6 @@
           </div>
         <% end %>
       <% end %>
-    <%= submit_tag "Submit Entry", class: "btn btn-default"%>
+    <%= submit_tag "Submit Entry", class: "btn btn-primary"%>
   </div>
 </div>
