--- a/app/views/manager_entries/new.html.erb
+++ b/app/views/manager_entries/new.html.erb
@@ -14,7 +14,7 @@
     <div class="tab-content">
 
       <h1>Hello, <%= @manager.first_name.capitalize %> </h1>
-  
+
       <% @manager.employees.each_with_index do |employee, index| %>
       <div id= <%= employee.id %> class="tab-pane fade <%=  index == 0 ? 'in active' : ''  %> ">
         <h3>Reviewing: <%= employee.full_name %> </h3>
@@ -144,7 +144,7 @@
         <% end %>
 
         <% end %>
-        <%= submit_tag "Submit Entry", class: "btn btn-default"%>
+        <%= submit_tag "Submit Entry", class: "btn btn-primary"%>
       </div>
       <% end %>
 
