Download all employee data

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -22,7 +22,8 @@
 }
 
 .action-wrapper {
-  height: 80%;
+
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
